# sharkos

./: Cargo.toml  program.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  apic.rs  elf.rs  framebuffer.rs  gdt.rs  interrupts.rs  main.rs  paging.rs  scheduling.rs
src/: main.rs
