[package]
name = "annarbor"
version = "0.1.0"
edition = "2021"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
xmas-elf = "0.9.1"

[build-dependencies]
bootloader = "0.11.7"

[build-dependencies.kernel]
path = "kernel"
artifact = "bin"
target = "x86_64-unknown-none"

[workspace]
members = ["kernel"]
